--- a/recyclerview-example/build.gradle
+++ b/recyclerview-example/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
 
     implementation project(':recyclerview')
 
