--- a/recyclerview-example/src/main/AndroidManifest.xml
+++ b/recyclerview-example/src/main/AndroidManifest.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.dwiariyanto.recyclerview.example">
-	
-	<application
-		android:name=".MainApplication"
-		android:allowBackup="true"
-		android:icon="@mipmap/ic_launcher"
-		android:label="@string/app_name"
-		android:roundIcon="@mipmap/ic_launcher_round"
-		android:supportsRtl="true"
-		android:theme="@style/AppTheme"
-		>
-		<activity android:name=".feature.home.HomeActivity">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-		<activity android:name=".feature.singleitem.SingleItemActivity" />
-		<activity android:name=".feature.multiitem.MultiItemActivity" />
-		<activity android:name=".feature.loadmore.LoadMoreActivity" />
-	</application>
+    package="com.dwiariyanto.recyclerview.example">
+
+    <application
+        android:name=".MainApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".feature.home.HomeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".feature.singleitem.SingleItemActivity" />
+        <activity android:name=".feature.multiitem.MultiItemActivity" />
+        <activity android:name=".feature.loadmore.LoadMoreActivity" />
+        <activity android:name=".feature.empty.EmptyActivity"></activity>
+    </application>
+
 </manifest>
