--- a/recyclerview-example/src/main/AndroidManifest.xml
+++ b/recyclerview-example/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".feature.singleitem.SingleItemActivity" />
         <activity android:name=".feature.multiitem.MultiItemActivity" />
         <activity android:name=".feature.loadmore.LoadMoreActivity" />
+        <activity android:name=".feature.loadmorewithoutnomore.LoadMoreWithoutNoMoreActivity" />
         <activity android:name=".feature.empty.EmptyActivity" />
         <activity android:name=".feature.multiitem2.MultiItem2Activity"></activity>
     </application>
